@@ -86,7 +86,6 @@ IDEAS:\n
               </tal:block>\n
             </tal:block>\n
           </tal:block>\n
-          <!-- May need to remove duplicates -->\n
           <tal:block tal:repeat="js js_list">\n
             <script tal:attributes="src js" type="text/javascript"></script>\n
           </tal:block>\n
@@ -97,13 +96,12 @@ IDEAS:\n
           </tal:block>\n
         </head>\n
         <body tal:attributes="class body_css_class|nothing">\n
-          <form id="main_form"\n
+          <form id="main_form" \n
+                onsubmit="changed=false; return true"\n
                 tal:attributes="enctype enctype | form/Form_getEnctype | nothing;\n
                 action url;\n
                 method python:str(path(\'form/method | string:post\')).lower()">\n
             <fieldset id="hidden_fieldset">\n
-              <!-- Hidden button as explained in http://ppewww.ph.gla.ac.uk/~flavell/www/formquestion.html -->\n
-              <!-- We should probably call the default method instead -->\n
               <input tal:condition="form_action | nothing"\n
                      id="hidden_button" type="submit" value="dummy"\n
                      tal:attributes="name string:${form_action}:method" />\n
@@ -135,10 +133,12 @@ IDEAS:\n
                   </div>\n
                 </tal:block>\n
                 <div tal:content="request/portal_status_message | nothing" id="transition_message" />\n
-                <div id="information_area" tal:condition="request/field_errors | nothing"\n
-                    i18n:translate="" i18n:domain="ui">\n
-                  Input data has errors. Please look at the error messages below.\n
-                </div>\n
+                <tal:block tal:condition="request/field_errors | nothing">\n
+                  <div id="information_area" i18n:translate="" i18n:domain="ui">\n
+                    Input data has errors. Please look at the error messages below.\n
+                  </div>\n
+                  <script type="text/javascript">changed = true;</script>\n
+                </tal:block>\n
               </div>\n
               <div id="master">\n
                 <tal:block metal:define-slot="main" />\n
